--- a/Knaeckebot/Controls/Actions/KeyboardActionControl.xaml
+++ b/Knaeckebot/Controls/Actions/KeyboardActionControl.xaml
@@ -1,118 +1,132 @@
 ﻿<UserControl x:Class="Knaeckebot.Controls.Actions.KeyboardActionControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Knaeckebot.Controls.Actions"
-             xmlns:converters="clr-namespace:Knaeckebot.Converters"
-             mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="300">
+          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+          xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+          xmlns:local="clr-namespace:Knaeckebot.Controls.Actions"
+          xmlns:converters="clr-namespace:Knaeckebot.Converters"
+          mc:Ignorable="d" 
+          d:DesignHeight="400" d:DesignWidth="300">
     <UserControl.Resources>
         <converters:KeyToKeyItemConverter x:Key="KeyToKeyItemConverter"/>
         <converters:KeyArrayToStringConverter x:Key="KeyArrayToStringConverter"/>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter"/>
     </UserControl.Resources>
-    <GroupBox Header="Keyboard Input Details" Margin="0,0,0,5" Padding="5">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <!-- Row for the text field with current keys -->
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Action type:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center"/>
-            <!-- Direct selection of keyboard action types with radio buttons -->
-            <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="0,0,0,5">
-                <RadioButton Content="Text" Margin="0,0,5,0" Name="rbTypeText" 
-                             Checked="KeyboardActionTypeRadio_Checked" />
-                <RadioButton Content="Key" Margin="5,0,5,0" Name="rbKeyPress" 
-                             Checked="KeyboardActionTypeRadio_Checked" />
-                <RadioButton Content="Combination" Margin="5,0,5,0" Name="rbKeyCombination" 
-                             Checked="KeyboardActionTypeRadio_Checked" />
-                <RadioButton Content="Hotkey" Margin="5,0,0,0" Name="rbHotkey" 
-                             Checked="KeyboardActionTypeRadio_Checked" />
-            </StackPanel>
-            <!-- Text field for keyboard input (for TypeText) -->
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Text:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblText" Visibility="Collapsed"/>
-            <TextBox Grid.Row="1" Grid.Column="1" Name="txtText" 
-                     Margin="0,0,0,5" TextWrapping="Wrap" AcceptsReturn="True" Height="60" 
-                     Visibility="Collapsed"/>
-            <!-- Clipboard option -->
-            <TextBlock Grid.Row="2" Grid.Column="0" Margin="0,0,5,5" 
-                       Name="lblClipboard" Visibility="Collapsed"/>
-            <CheckBox Grid.Row="2" Grid.Column="1" Content="Paste from clipboard" 
-                      Name="chkUseClipboard" Margin="0,0,0,5" Visibility="Collapsed"/>
-            <!-- Single key (for KeyPress) -->
-            <TextBlock Grid.Row="3" Grid.Column="0" Text="Key:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblKey" Visibility="Collapsed"/>
-            <ComboBox Grid.Row="3" Grid.Column="1" 
-                      Name="cmbKey" Margin="0,0,0,5" IsEditable="True"
-                      Visibility="Collapsed"/>
-            <!-- Key combination (for KeyCombination/Hotkey) -->
-            <TextBlock Grid.Row="3" Grid.Column="0" Text="Combination:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblCombination" Visibility="Collapsed"/>
-            <Grid Grid.Row="3" Grid.Column="1" Name="gridCombination" Visibility="Collapsed">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <!-- Modifier keys -->
-                <CheckBox Grid.Column="0" Content="Ctrl" Margin="0,0,5,0" 
-                          Name="chkCtrl"/>
-                <CheckBox Grid.Column="1" Content="Alt" Margin="0,0,5,0" 
-                          Name="chkAlt"/>
-                <CheckBox Grid.Column="2" Content="Shift" Margin="0,0,5,0" 
-                          Name="chkShift"/>
-                <!-- Main key -->
-                <ComboBox Grid.Column="3" Name="cmbCombinationKey"
-                          Margin="0,0,0,5" IsEditable="True"/>
-            </Grid>
-            <!-- Flexible key combination with variable keys (for KeyCombination/Hotkey) -->
-            <TextBlock Grid.Row="4" Grid.Column="0" Text="Flexible combination:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblFlexibleCombination" Visibility="Collapsed"/>
-            <DockPanel Grid.Row="4" Grid.Column="1" Name="panelFlexibleCombination" Visibility="Collapsed">
-                <!-- Controls for key combinations -->
-                <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,0,0,5">
-                    <Button Content="Add key" Name="btnAddKey" Margin="0,0,5,0"/>
-                    <Button Content="Remove key" Name="btnRemoveKey" Margin="0,0,5,0"/>
-                </StackPanel>
-                <!-- Scrollable area for keys -->
-                <ScrollViewer DockPanel.Dock="Bottom" HorizontalScrollBarVisibility="Auto" 
-                              VerticalScrollBarVisibility="Disabled" Margin="0,5,0,0">
-                    <ItemsControl Name="icKeyEntries">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                    </ItemsControl>
-                </ScrollViewer>
-            </DockPanel>
-            <!-- Delay between characters (for TypeText) -->
-            <TextBlock Grid.Row="5" Grid.Column="0" Text="Character delay (ms):" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblCharDelay" Visibility="Collapsed"/>
-            <TextBox Grid.Row="5" Grid.Column="1" Name="txtCharDelay" 
-                     Width="80" HorizontalAlignment="Left" Visibility="Collapsed"/>
-            <!-- TextBlock for the actually stored keys -->
-            <TextBlock Grid.Row="7" Grid.Column="0" Text="Stored keys:" Margin="0,10,5,5" 
-                       VerticalAlignment="Center" Name="lblStoredKeys" Visibility="Collapsed"/>
-            <Border Grid.Row="7" Grid.Column="1" Margin="0,10,0,5" 
-                    BorderBrush="DarkGray" BorderThickness="1" Padding="5"
-                    Background="LightYellow" Name="borderStoredKeys" Visibility="Collapsed">
-                <TextBlock Name="txtStoredKeys" FontWeight="Bold" TextWrapping="Wrap"/>
-            </Border>
-        </Grid>
-    </GroupBox>
+<GroupBox Header="Keyboard Input Details" Margin="0,0,0,5" Padding="5">
+<Grid>
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="*"/>
+</Grid.ColumnDefinitions>
+<Grid.RowDefinitions>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<!-- Row for the text field with current keys -->
+<RowDefinition Height="Auto"/>
+</Grid.RowDefinitions>
+<TextBlock Grid.Row="0" Grid.Column="0" Text="Action type:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center"/>
+<!-- Direct selection of keyboard action types with radio buttons -->
+<StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="0,0,0,5">
+<RadioButton Content="Text" Margin="0,0,5,0" Name="rbTypeText" 
+                          Checked="RadioButton_Checked" />
+<RadioButton Content="Key" Margin="5,0,5,0" Name="rbKeyPress" 
+                          Checked="RadioButton_Checked" />
+<RadioButton Content="Combination" Margin="5,0,5,0" Name="rbKeyCombination" 
+                          Checked="RadioButton_Checked" />
+<RadioButton Content="Hotkey" Margin="5,0,0,0" Name="rbHotkey" 
+                          Checked="RadioButton_Checked" />
+</StackPanel>
+<!-- Text field for keyboard input (for TypeText) -->
+<TextBlock Grid.Row="1" Grid.Column="0" Text="Text:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblText" Visibility="Collapsed"/>
+<TextBox Grid.Row="1" Grid.Column="1" Name="txtText" 
+                  Margin="0,0,0,5" TextWrapping="Wrap" AcceptsReturn="True" Height="60" 
+                  Visibility="Collapsed"/>
+<!-- Clipboard option -->
+<TextBlock Grid.Row="2" Grid.Column="0" Margin="0,0,5,5" 
+                    Name="lblClipboard" Visibility="Collapsed"/>
+<CheckBox Grid.Row="2" Grid.Column="1" Content="Paste from clipboard" 
+                   Name="chkUseClipboard" Margin="0,0,0,5" Visibility="Collapsed"/>
+<!-- Single key (for KeyPress) -->
+<TextBlock Grid.Row="3" Grid.Column="0" Text="Key:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblKey" Visibility="Collapsed"/>
+<ComboBox Grid.Row="3" Grid.Column="1" 
+                   Name="cmbKey" Margin="0,0,0,5" IsEditable="True"
+                   TextSearch.TextPath="DisplayValue"
+                   Visibility="Collapsed"/>
+<!-- Key combination (for KeyCombination/Hotkey) -->
+<TextBlock Grid.Row="3" Grid.Column="0" Text="Combination:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblCombination" Visibility="Collapsed"/>
+<Grid Grid.Row="3" Grid.Column="1" Name="gridCombination" Visibility="Collapsed">
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="*"/>
+</Grid.ColumnDefinitions>
+<!-- Modifier keys -->
+<CheckBox Grid.Column="0" Content="Ctrl" Margin="0,0,5,0" 
+                       Name="chkCtrl"/>
+<CheckBox Grid.Column="1" Content="Alt" Margin="0,0,5,0" 
+                       Name="chkAlt"/>
+<CheckBox Grid.Column="2" Content="Shift" Margin="0,0,5,0" 
+                       Name="chkShift"/>
+<!-- Main key -->
+<ComboBox Grid.Column="3" Name="cmbCombinationKey"
+                       TextSearch.TextPath="DisplayValue"
+                       Margin="0,0,0,5" IsEditable="True"/>
+</Grid>
+<!-- Flexible key combination with variable keys (for KeyCombination/Hotkey) -->
+<TextBlock Grid.Row="4" Grid.Column="0" Text="Flexible combination:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblFlexibleCombination" Visibility="Collapsed"/>
+<DockPanel Grid.Row="4" Grid.Column="1" Name="panelFlexibleCombination" Visibility="Collapsed">
+<!-- Controls for key combinations -->
+<StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0,0,0,5">
+<Button Content="Add key" Name="btnAddKey" Margin="0,0,5,0"/>
+<Button Content="Remove key" Name="btnRemoveKey" Margin="0,0,5,0"/>
+</StackPanel>
+<!-- Scrollable area for keys -->
+<ScrollViewer DockPanel.Dock="Bottom" HorizontalScrollBarVisibility="Auto" 
+                           VerticalScrollBarVisibility="Disabled" Margin="0,5,0,0">
+<ItemsControl Name="icKeyEntries">
+<ItemsControl.ItemsPanel>
+<ItemsPanelTemplate>
+<StackPanel Orientation="Horizontal"/>
+</ItemsPanelTemplate>
+</ItemsControl.ItemsPanel>
+<ItemsControl.ItemTemplate>
+<DataTemplate>
+<ComboBox ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataContext.AllKeys}"
+                                       SelectedItem="{Binding SelectedKey, Converter={StaticResource KeyToKeyItemConverter}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                       Margin="0,0,5,0"
+                                       Width="120"
+                                       IsEditable="True"
+                                       TextSearch.TextPath="DisplayValue"/>
+</DataTemplate>
+</ItemsControl.ItemTemplate>
+</ItemsControl>
+</ScrollViewer>
+</DockPanel>
+<!-- Delay between characters (for TypeText) -->
+<TextBlock Grid.Row="5" Grid.Column="0" Text="Character delay (ms):" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblCharDelay" Visibility="Collapsed"/>
+<TextBox Grid.Row="5" Grid.Column="1" Name="txtCharDelay" 
+                  Width="80" HorizontalAlignment="Left" Visibility="Collapsed"/>
+<!-- TextBlock for the actually stored keys -->
+<TextBlock Grid.Row="7" Grid.Column="0" Text="Stored keys:" Margin="0,10,5,5" 
+                    VerticalAlignment="Center" Name="lblStoredKeys" Visibility="Collapsed"/>
+<Border Grid.Row="7" Grid.Column="1" Margin="0,10,0,5" 
+                 BorderBrush="DarkGray" BorderThickness="1" Padding="5"
+                 Background="LightYellow" Name="borderStoredKeys" Visibility="Collapsed">
+<TextBlock Name="txtStoredKeys" FontWeight="Bold" TextWrapping="Wrap"/>
+</Border>
+</Grid>
+</GroupBox>
 </UserControl>
