--- a/Knaeckebot/Controls/Actions/LoopActionControl.xaml
+++ b/Knaeckebot/Controls/Actions/LoopActionControl.xaml
@@ -1,141 +1,154 @@
 ﻿<UserControl x:Class="Knaeckebot.Controls.Actions.LoopActionControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Knaeckebot.Controls.Actions"
-             xmlns:converters="clr-namespace:Knaeckebot.Converters"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="300">
+          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+          xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+          xmlns:local="clr-namespace:Knaeckebot.Controls.Actions"
+          xmlns:converters="clr-namespace:Knaeckebot.Converters"
+          mc:Ignorable="d" 
+          d:DesignHeight="450" d:DesignWidth="300">
     <UserControl.Resources>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <converters:EnumToVisibilityConverter x:Key="EnumToVisibilityConverter"/>
-    </UserControl.Resources>
-    <GroupBox Header="Loop Details" Margin="0,0,0,5" Padding="5">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Max. iterations:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center"/>
-            <TextBox Grid.Row="0" Grid.Column="1" Name="txtMaxIterations" 
-                     Margin="0,0,0,5" Width="80" HorizontalAlignment="Left"/>
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="With condition:" Margin="0,0,5,0" 
-                       VerticalAlignment="Center"/>
-            <CheckBox Grid.Row="1" Grid.Column="1" Name="chkUseCondition" 
-                      Margin="0,5,0,5" Checked="ChkUseCondition_CheckedChanged" Unchecked="ChkUseCondition_CheckedChanged" />
-            <!-- Condition area (only visible when UseCondition is activated) -->
-            <TextBlock Grid.Row="2" Grid.Column="0" Text="Left side:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblLeftSide"
-                       Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
-            <Grid Grid.Row="2" Grid.Column="1" Margin="0,0,0,5" Name="gridLeftSide"
-                  Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <ComboBox Grid.Column="0" Width="110" Margin="0,0,5,0" Name="cmbLeftSourceType" 
-                          SelectionChanged="CmbSourceType_SelectionChanged"/>
-                <!-- Variable -->
-                <ComboBox Grid.Column="1" Name="cmbLeftVariableName"
-                          IsEditable="True"
-                          Visibility="Collapsed"/>
-                <!-- Text -->
-                <TextBox Grid.Column="1" Name="txtLeftCustomText"
-                         Visibility="Collapsed"/>
-                <!-- Clipboard (no input field needed) -->
-                <TextBlock Grid.Column="1" Text="Current clipboard content" Name="lblLeftClipboard"
-                           Opacity="0.7" Margin="5,0,0,0" VerticalAlignment="Center" Visibility="Collapsed"/>
-            </Grid>
-            <TextBlock Grid.Row="3" Grid.Column="0" Text="Comparison type:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblOperator"
-                       Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
-            <ComboBox Grid.Row="3" Grid.Column="1" Margin="0,0,0,5" Name="cmbOperator"
-                      Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
-            <TextBlock Grid.Row="4" Grid.Column="0" Text="Right side:" Margin="0,0,5,5" 
-                       VerticalAlignment="Center" Name="lblRightSide"
-                       Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
-            <Grid Grid.Row="4" Grid.Column="1" Margin="0,0,0,5" Name="gridRightSide"
-                  Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <ComboBox Grid.Column="0" Width="110" Margin="0,0,5,0" Name="cmbRightSourceType"
-                          SelectionChanged="CmbSourceType_SelectionChanged"/>
-                <!-- Variable -->
-                <ComboBox Grid.Column="1" Name="cmbRightVariableName"
-                          IsEditable="True"
-                          Visibility="Collapsed"/>
-                <!-- Text -->
-                <TextBox Grid.Column="1" Name="txtRightCustomText"
-                         Visibility="Collapsed"/>
-                <!-- Clipboard (no input field needed) -->
-                <TextBlock Grid.Column="1" Text="Current clipboard content" Name="lblRightClipboard"
-                           Opacity="0.7" Margin="5,0,0,0" VerticalAlignment="Center" Visibility="Collapsed"/>
-            </Grid>
-            <!-- Loop actions - Header with control options -->
-            <TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Text="Actions in the loop:" 
-                       Margin="0,10,0,5" FontWeight="Bold"/>
-            <!-- Control elements for loop actions -->
-            <StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,0,0,5">
-                <TextBlock Name="txtActionCount" Text="Number of actions: 0"
-                           VerticalAlignment="Center" Margin="0,0,10,0"/>
-                <Button Content="Move up" Margin="0,0,5,0" Name="btnMoveUp" Click="BtnMoveUp_Click"/>
-                <Button Content="Move down" Margin="0,0,5,0" Name="btnMoveDown" Click="BtnMoveDown_Click"/>
-                <Button Content="Delete" Margin="0,0,5,0" Name="btnDelete" Click="BtnDelete_Click"/>
-                <Button Content="Copy" Margin="0,0,5,0" Name="btnCopy" Click="BtnCopy_Click" 
-                        ToolTip="Copy selected actions"/>
-                <Button Content="Paste" Margin="0,0,5,0" Name="btnPaste" Click="BtnPaste_Click"/>
-            </StackPanel>
-            <!-- Loop hint -->
-            <TextBlock Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" 
-                       Text="Note: To add actions to the loop, copy actions from the main action list with Ctrl+C and paste using the Paste button above."
-                       TextWrapping="Wrap" Margin="0,5,0,5" FontStyle="Italic"/>
-            <!-- ListView for loop actions -->
-            <ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2"
-                      Name="lvLoopActions"
-                      SelectionMode="Extended"
-                      MinHeight="150" MaxHeight="300"
-                      Margin="0,5,0,0"
-                      BorderThickness="1"
-                      SelectionChanged="LvLoopActions_SelectionChanged"
-                      MouseDoubleClick="LvLoopActions_DoubleClick">
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    </Style>
-                </ListView.ItemContainerStyle>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="2">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <CheckBox Grid.Column="0" IsChecked="{Binding IsEnabled}" 
-                                     VerticalAlignment="Center" Margin="0,0,5,0"/>
-                            <StackPanel Grid.Column="1">
-                                <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
-                                <TextBlock Text="{Binding}" TextWrapping="Wrap"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </Grid>
-    </GroupBox>
+        <Style x:Key="CompactActionStyle" TargetType="ListViewItem">
+<Setter Property="HorizontalContentAlignment" Value="Stretch" />
+<Setter Property="Padding" Value="2" />
+<Setter Property="BorderThickness" Value="0,0,0,1" />
+<Setter Property="BorderBrush" Value="#E0E0E0" />
+</Style>
+</UserControl.Resources>
+<GroupBox Header="Loop Details" Margin="0,0,0,5" Padding="5">
+<Grid>
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="*"/>
+</Grid.ColumnDefinitions>
+<Grid.RowDefinitions>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="Auto"/>
+<RowDefinition Height="*"/>
+</Grid.RowDefinitions>
+<TextBlock Grid.Row="0" Grid.Column="0" Text="Max. iterations:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center"/>
+<TextBox Grid.Row="0" Grid.Column="1" Name="txtMaxIterations" 
+                  Margin="0,0,0,5" Width="80" HorizontalAlignment="Left"/>
+<TextBlock Grid.Row="1" Grid.Column="0" Text="With condition:" Margin="0,0,5,0" 
+                    VerticalAlignment="Center"/>
+<CheckBox Grid.Row="1" Grid.Column="1" Name="chkUseCondition" 
+                   Margin="0,5,0,5" Checked="ChkUseCondition_CheckedChanged" Unchecked="ChkUseCondition_CheckedChanged" />
+<!-- Condition area (only visible when UseCondition is activated) -->
+<TextBlock Grid.Row="2" Grid.Column="0" Text="Left side:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblLeftSide"
+                    Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
+<Grid Grid.Row="2" Grid.Column="1" Margin="0,0,0,5" Name="gridLeftSide"
+               Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}">
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="*"/>
+</Grid.ColumnDefinitions>
+<ComboBox Grid.Column="0" Width="110" Margin="0,0,5,0" Name="cmbLeftSourceType" 
+                       SelectionChanged="CmbSourceType_SelectionChanged"/>
+<!-- Variable -->
+<ComboBox Grid.Column="1" Name="cmbLeftVariableName"
+                       IsEditable="True"
+                       Visibility="Collapsed"/>
+<!-- Text -->
+<TextBox Grid.Column="1" Name="txtLeftCustomText"
+                      Visibility="Collapsed"/>
+<!-- Clipboard (no input field needed) -->
+<TextBlock Grid.Column="1" Text="Current clipboard content" Name="lblLeftClipboard"
+                        Opacity="0.7" Margin="5,0,0,0" VerticalAlignment="Center" Visibility="Collapsed"/>
+</Grid>
+<TextBlock Grid.Row="3" Grid.Column="0" Text="Comparison type:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblOperator"
+                    Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
+<ComboBox Grid.Row="3" Grid.Column="1" Margin="0,0,0,5" Name="cmbOperator"
+                   Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
+<TextBlock Grid.Row="4" Grid.Column="0" Text="Right side:" Margin="0,0,5,5" 
+                    VerticalAlignment="Center" Name="lblRightSide"
+                    Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}"/>
+<Grid Grid.Row="4" Grid.Column="1" Margin="0,0,0,5" Name="gridRightSide"
+               Visibility="{Binding ElementName=chkUseCondition, Path=IsChecked, Converter={StaticResource BoolToVisibilityConverter}}">
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="*"/>
+</Grid.ColumnDefinitions>
+<ComboBox Grid.Column="0" Width="110" Margin="0,0,5,0" Name="cmbRightSourceType"
+                       SelectionChanged="CmbSourceType_SelectionChanged"/>
+<!-- Variable -->
+<ComboBox Grid.Column="1" Name="cmbRightVariableName"
+                       IsEditable="True"
+                       Visibility="Collapsed"/>
+<!-- Text -->
+<TextBox Grid.Column="1" Name="txtRightCustomText"
+                      Visibility="Collapsed"/>
+<!-- Clipboard (no input field needed) -->
+<TextBlock Grid.Column="1" Text="Current clipboard content" Name="lblRightClipboard"
+                        Opacity="0.7" Margin="5,0,0,0" VerticalAlignment="Center" Visibility="Collapsed"/>
+</Grid>
+<!-- Loop actions - Header with control options -->
+<TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Text="Actions in the loop:" 
+                    Margin="0,10,0,5" FontWeight="Bold"/>
+<!-- Control elements for loop actions -->
+<StackPanel Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,0,0,5">
+<TextBlock Name="txtActionCount" Text="Number of actions: 0"
+                        VerticalAlignment="Center" Margin="0,0,10,0"/>
+<Button Content="Move â†‘" Margin="0,0,5,0" Name="btnMoveUp" Click="BtnMoveUp_Click"
+                     ToolTip="Move selected actions up"/>
+<Button Content="Move â†“" Margin="0,0,5,0" Name="btnMoveDown" Click="BtnMoveDown_Click"
+                     ToolTip="Move selected actions down"/>
+<Button Content="Delete" Margin="0,0,5,0" Name="btnDelete" Click="BtnDelete_Click"
+                     ToolTip="Delete selected actions"/>
+<Button Content="Copy" Margin="0,0,5,0" Name="btnCopy" Click="BtnCopy_Click" 
+                     ToolTip="Copy selected actions"/>
+<Button Content="Paste" Margin="0,0,5,0" Name="btnPaste" Click="BtnPaste_Click"
+                     ToolTip="Paste copied actions"/>
+</StackPanel>
+<!-- Loop hint -->
+<TextBlock Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" 
+                    Text="Note: Double-click on any action in the loop to show its details."
+                    TextWrapping="Wrap" Margin="0,5,0,5" FontStyle="Italic"/>
+<!-- ListView for loop actions -->
+<ListView Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2"
+                   Name="lvLoopActions"
+                   SelectionMode="Extended"
+                   MinHeight="150" MaxHeight="300"
+                   Margin="0,5,0,0"
+                   BorderThickness="1"
+                   SelectionChanged="LvLoopActions_SelectionChanged"
+                   MouseDoubleClick="LvLoopActions_DoubleClick">
+<ListView.ItemContainerStyle>
+<Style BasedOn="{StaticResource CompactActionStyle}" TargetType="ListViewItem"/>
+</ListView.ItemContainerStyle>
+<ListView.ItemTemplate>
+<DataTemplate>
+<Grid Margin="2">
+<Grid.ColumnDefinitions>
+<ColumnDefinition Width="Auto"/>
+<ColumnDefinition Width="*"/>
+</Grid.ColumnDefinitions>
+<CheckBox Grid.Column="0" IsChecked="{Binding IsEnabled}" 
+                                  VerticalAlignment="Center" Margin="0,0,5,0"/>
+<StackPanel Grid.Column="1">
+<TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+<TextBlock>
+<Run Text="{Binding GetType().Name}" Foreground="#777777"/>
+<Run Text=" - " Foreground="#777777"/>
+<Run Text="{Binding DelayBefore}" Foreground="#777777"/>
+<Run Text="ms" Foreground="#777777"/>
+</TextBlock>
+</StackPanel>
+</Grid>
+</DataTemplate>
+</ListView.ItemTemplate>
+</ListView>
+</Grid>
+</GroupBox>
 </UserControl>
